--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -5,35 +5,51 @@
     </button>
     <ion-title>{{selectedItem.name}}</ion-title>
   </ion-navbar>
+
 </ion-header>
 
 
+<ion-content >
 
-<ion-content padding>
-  <img src="../../assets/lrz/hauptgebaude.jpg">
 
   <ion-grid>
 
     <ion-row>
       <ion-col col-0 col-lg-4></ion-col>
       <ion-col col-12 col-lg-4>
-        <button style="width: 100%;" ion-button (click)="goToRooms($event, selectedItem)" color="light">Räume</button>
-
+        <ion-card>
+          <img *ngIf="selectedItem.image" [src]="selectedItem.image">
+          <ion-card-content>
+            <ion-card-title>
+              <h1>
+                {{selectedItem.name}}
+              </h1>
+            </ion-card-title>
+            <p>
+              {{selectedItem.description}}
+            </p>
+          </ion-card-content>
+          <ion-row>
+            <ion-col col-6>
+              <button ion-button style="width:100%;" small clear outline (click)="goToRooms($event, selectedItem)" color="primary">Räume
+              </button>
+            </ion-col>
+            <ion-col col-6>
+              <button *ngIf="!favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)" color="primary" icon-left>
+                <ion-icon  name="star-outline"></ion-icon>
+                 Favorit
+              </button>
+              <button *ngIf="favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)" color="primary" icon-left>
+                <ion-icon  name="star"></ion-icon>
+                Favorit
+              </button>
+            </ion-col>
+          </ion-row>
+        </ion-card>
       </ion-col>
       <ion-col col-0 col-lg-4></ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col col-0 col-lg-4></ion-col>
-      <ion-col col-12 col-lg-4>
-
-        <button  style="width: 100%;" ion-button (click)="favorite($event, selectedItem)" color="light" ion-button icon-right>
-          Favorisieren
-          <ion-icon name="star-outline" style="color:yellow;"></ion-icon>
-        </button>
-      </ion-col>
-      <ion-col col-0 col-lg-4></ion-col>
-    </ion-row>
 
     <ion-row>
       <ion-col col-0 col-lg-4></ion-col>
@@ -43,9 +59,9 @@
           <ion-card-header class="chart-header">
             Auslastung
           </ion-card-header>
+          <div class="percentage"> {{(selectedItem.now/selectedItem.max) | percent:'1.0-0'}}</div>
           <canvas width="400" height="400" class="chart-canvas" #liveCanvas></canvas>
 
-          <div class="percentage"> {{(selectedItem.now/selectedItem.max) | percent:'1.0-0'}}</div>
         </ion-card>
       </ion-col>
       <ion-col col-0 col-lg-4></ion-col>
