Starting with Bar Chart

--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -63,6 +63,25 @@
           <canvas width="400" height="400" class="chart-canvas" #liveCanvas></canvas>
 
         </ion-card>
+
+
+      </ion-col>
+      <ion-col col-0 col-lg-4></ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-0 col-lg-4></ion-col>
+      <ion-col col-12 col-lg-4>
+
+        <ion-card>
+          <ion-card-header class="chart-header">
+            Prognose
+          </ion-card-header>
+          <canvas width="400" height="400" class="chart-canvas" #barCanvas></canvas>
+
+        </ion-card>
+
+
       </ion-col>
       <ion-col col-0 col-lg-4></ion-col>
     </ion-row>
