--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>München</ion-title>
+    <ion-title>UniPlatz - München</ion-title>
   </ion-navbar>
 </ion-header>
 
