Content Changes to about and help

--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -16,38 +16,16 @@
     <ion-card-content>
 
       <h1> Wie funktioniert diese App?</h1>
-      <div> sdfdsfsdf</div>
+      <div> UniPlatz benutzt öffentlich bereitgestellte W-Lan Statistiken um auf die Auslastung von Vorlesungsälen und
+      Mensen zu schließen.</div>
 
       <h1> Wieso stimmen die angezeigten Daten nicht immer?</h1>
-      <div> sddssdfsdf</div>
-
-      <h1> Bug gefunden?</h1>
-      <div>
-        Bitte schicke eine Mail (bitte wenn möglich mit Screenshot) an: mail@todo.com
-      </div>
-
-      <h1>Wieso wird mir Werbung angezeigt?</h1>
-      <div>
-        Das betreiben dieser App ist mit nicht unerheblichen Kosten für Server und Datenbanken verbunden.
-        Um die Server des LRZ nicht unnötig zu belasten werden die Daten von einem gesonderten Server ausgespielt,
-        der natürlich bezahlt werden muss.
-      </div>
-
-      <h1>Spenden</h1>
-      <div>
-        Wenn du die Weiterentwicklung dieser App unterstützen willst:
-        SPENDENLINK
-      </div>
+      <div> UniPlatz lernt ständig dazu. Je länger es die App gibt, desto genauer werden ihre Daten.</div>
 
       <h1 class="headline"> Wieso funktioniert diese App nur für Münchner Universitäten?</h1>
       <div> Die App hängt von W-LAN Nutzungsdaten ab, die von den meisten Unis zwar erhoben aber nicht veröffentlicht
         werden.
-        Solltest du Zugriff auf diese Daten einer anderen Hochschule haben, so melde dich bitte per Mail hier:
-        mail@todo.com
-        Ich werde dann versuchen diese Hochschule ebenfalls in die App aufzunehmen.
       </div>
-
-
     </ion-card-content>
   </ion-card>
 
