--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -14,13 +14,14 @@
     <ion-card-title>
     </ion-card-title>
     <ion-card-content>
-
-      <h1> Impressum</h1>
+      <div>
+        UniPlatz benutzt öffentlich bereitgestellte W-Lan Statistiken um auf die Auslastung von Vorlesungsälen und
+        Mensen zu schließen.
+      </div>
       <div> Programmiert von <b>Finally Binary</b></div>
       <div> Nikolai Fischer</div>
-      <div> mail@todo.com</div>
 
-      <div> Diese App ist <b>kein</b> Produkt des LRzs, der LMU, HM oder TU München.</div>
+      <div> Diese App ist <b>kein</b> Produkt des LRZs, der LMU, HM oder TU München.</div>
       <div> Daten werden vom  <b>Leibniz-Rechenzentrum bezogen. </b></div>
       <div> Es werden keine Garantien über die Korrektheit und Verfügbarkeit der Daten und der App geben.</div>
       <button style="margin-top:20px;" (click)="showLicenses()" ion-button> Open-Source Lizenzen</button>
