--- a/src/pages/room-details/room-details.html
+++ b/src/pages/room-details/room-details.html
@@ -31,12 +31,14 @@
           <ion-col col-4>
           </ion-col>
           <ion-col col-4>
-            <button *ngIf="!favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)" color="primary" icon-left>
-              <ion-icon  name="star-outline"></ion-icon>
+            <button *ngIf="!favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)"
+              color="primary" icon-left>
+              <ion-icon name="star-outline"></ion-icon>
               Favorit
             </button>
-            <button *ngIf="favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)" color="primary" icon-left>
-              <ion-icon  name="star"></ion-icon>
+            <button *ngIf="favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)"
+              color="primary" icon-left>
+              <ion-icon name="star"></ion-icon>
               Favorit
             </button>
           </ion-col>
@@ -50,16 +52,7 @@
   <ion-row>
     <ion-col col-0 col-lg-4></ion-col>
     <ion-col col-12 col-lg-4>
-
-      <ion-card>
-        <ion-card-header class="chart-header">
-          Auslastung
-        </ion-card-header>
-        <div class="percentage"> {{(selectedItem.now/selectedItem.max) | percent:'1.0-0'}}</div>
-        <canvas width="400" height="400" class="chart-canvas" #liveCanvas></canvas>
-
-      </ion-card>
-
+      <capacity-gauge now="{{selectedItem.now}}" max="{{selectedItem.max}}"> </capacity-gauge>
 
     </ion-col>
     <ion-col col-0 col-lg-4></ion-col>
