--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -34,18 +34,11 @@
           </ion-card-content>
           <ion-row>
             <ion-col col-6>
-              <button ion-button style="width:100%;" small clear outline (click)="goToRooms($event, selectedItem)" color="primary">Räume
+              <button ion-button style="width:100%;" small clear outline (click)="onGoToRooms(selectedItem)" color="primary">Räume
               </button>
             </ion-col>
             <ion-col col-6>
-              <button *ngIf="!favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)" color="primary" icon-left>
-                <ion-icon  name="star-outline"></ion-icon>
-                 Favorit
-              </button>
-              <button *ngIf="favorited" ion-button style="width:100%;" small clear outline (click)="favorite($event, selectedItem)" color="primary" icon-left>
-                <ion-icon  name="star"></ion-icon>
-                Favorit
-              </button>
+              <favorite-button forBuilding="{{true}}" itemId={{selectedItem.id}}></favorite-button>
             </ion-col>
           </ion-row>
         </ion-card>
