--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -34,7 +34,7 @@
           </ion-card-content>
           <ion-row>
             <ion-col col-6>
-              <button ion-button style="width:100%;" small clear outline (click)="onGoToRooms(selectedItem)" color="primary">Räume
+              <button ion-button class="main-btn" small clear outline (click)="onGoToRooms(selectedItem)" color="primary">Räume
               </button>
             </ion-col>
             <ion-col col-6>
@@ -60,7 +60,7 @@
 
     <ion-row justify-content-center>
       <ion-col col-3>
-        <div style="text-align: center;">Überprüft: <b>{{selectedItem.date}} Uhr</b></div>
+        <div text-center>Überprüft: <b>{{selectedItem.date}} Uhr</b></div>
       </ion-col>
     </ion-row>
 
