--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -24,7 +24,7 @@
       <div> Diese App ist <b>kein</b> Produkt des LRZs, der LMU, HM oder TU München.</div>
       <div> Daten werden vom  <b>Leibniz-Rechenzentrum bezogen. </b></div>
       <div> Es werden keine Garantien über die Korrektheit und Verfügbarkeit der Daten und der App geben.</div>
-      <button style="margin-top:20px;" (click)="showLicenses()" ion-button> Open-Source Lizenzen</button>
+      <button (click)="showLicenses()" ion-button> Open-Source Lizenzen</button>
 
     </ion-card-content>
   </ion-card>
